test/bad/illtyping5.f
type int
data constructor One : {} -> int

program
  let x = One {} in
  x [int]
